--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-first">
         <h1><span>Bienvenue </span><span></span></h1>
         <div class="container-btns">
-            <a href="http://localhost/Projet_alfa_01122020/system/application/php/registration/login.php"><button class="btn-first b1">Se connecter</button></a>
+            <a href="system/application/php/registration/login.php"><button class="btn-first b1">Se connecter</button></a>
             <button class="btn-first b2">Stock</button>
         </div>
     </div>
